--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.cbt</groupId>
     <artifactId>configserverboot3</artifactId>
-    <version>stag-1</version>
+    <version>prod-1</version>
     <name>configserverboot3</name>
     <description>configserverboot3</description>
     <url/>
